src/test/ui/consts/uninhabited-const-issue-61744.stderr
error: any use of this value will cause an error
  --> $DIR/uninhabited-const-issue-61744.rs:4:5
   |
LL |     hint_unreachable()
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     reached the configured maximum number of stack frames
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<!>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `hint_unreachable` at $DIR/uninhabited-const-issue-61744.rs:8:5
   |     inside `fake_type::<i32>` at $DIR/uninhabited-const-issue-61744.rs:4:5
   |     inside `<i32 as Const>::CONSTANT` at $DIR/uninhabited-const-issue-61744.rs:12:36
...
LL |     const CONSTANT: i32 = unsafe { fake_type() };
   |     ---------------------------------------------
   |
   = note: `#[deny(const_err)]` on by default

error[E0080]: erroneous constant used
  --> $DIR/uninhabited-const-issue-61744.rs:18:10
   |
LL |     dbg!(i32::CONSTANT);
   |          ^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
